--- a/mysite/templates/polls/shop_detail.html
+++ b/mysite/templates/polls/shop_detail.html
@@ -345,17 +345,20 @@
             </div>
         </div>
 
+        <!-- Anchor point for scroll position -->
+        <div id="drink-filters"></div>
+
         <!-- 飲料篩選區 -->
         <div class="filter-section">
             <!-- Row 1: 奶類 -->
             <div class="filter-row">
                 <span class="filter-label">奶類：</span>
                 <div class="filter-buttons-group">
-                    <a href="?{% if milk_filter != 'fresh_milk' %}milk_type=fresh_milk{% endif %}&price={{ price_filter }}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?{% if milk_filter != 'fresh_milk' %}milk_type=fresh_milk{% endif %}&price={{ price_filter }}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if milk_filter == 'fresh_milk' %}active{% endif %}">
                         鮮奶
                     </a>
-                    <a href="?{% if milk_filter != 'creamer' %}milk_type=creamer{% endif %}&price={{ price_filter }}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?{% if milk_filter != 'creamer' %}milk_type=creamer{% endif %}&price={{ price_filter }}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if milk_filter == 'creamer' %}active{% endif %}">
                         奶精
                     </a>
@@ -366,15 +369,15 @@
             <div class="filter-row">
                 <span class="filter-label">價格：</span>
                 <div class="filter-buttons-group">
-                    <a href="?milk_type={{ milk_filter }}{% if price_filter != 'under_50' %}&price=under_50{% endif %}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}{% if price_filter != 'under_50' %}&price=under_50{% endif %}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if price_filter == 'under_50' %}active{% endif %}">
                         &lt;50
                     </a>
-                    <a href="?milk_type={{ milk_filter }}{% if price_filter != '50_80' %}&price=50_80{% endif %}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}{% if price_filter != '50_80' %}&price=50_80{% endif %}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if price_filter == '50_80' %}active{% endif %}">
                         50-80
                     </a>
-                    <a href="?milk_type={{ milk_filter }}{% if price_filter != 'over_80' %}&price=over_80{% endif %}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}{% if price_filter != 'over_80' %}&price=over_80{% endif %}&tea_type={{ tea_filter }}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if price_filter == 'over_80' %}active{% endif %}">
                         ≥80
                     </a>
@@ -385,27 +388,27 @@
             <div class="filter-row">
                 <span class="filter-label">茶類：</span>
                 <div class="filter-buttons-group">
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'black_tea' %}&tea_type=black_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'black_tea' %}&tea_type=black_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'black_tea' %}active{% endif %}">紅茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'green_tea' %}&tea_type=green_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'green_tea' %}&tea_type=green_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'green_tea' %}active{% endif %}">綠茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'oolong_tea' %}&tea_type=oolong_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'oolong_tea' %}&tea_type=oolong_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'oolong_tea' %}active{% endif %}">烏龍茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'blue_tea' %}&tea_type=blue_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'blue_tea' %}&tea_type=blue_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'blue_tea' %}active{% endif %}">青茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'matcha' %}&tea_type=matcha{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'matcha' %}&tea_type=matcha{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'matcha' %}active{% endif %}">抹茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'tieguanyin' %}&tea_type=tieguanyin{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'tieguanyin' %}&tea_type=tieguanyin{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'tieguanyin' %}active{% endif %}">鐵觀音</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'barley_tea' %}&tea_type=barley_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'barley_tea' %}&tea_type=barley_tea{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'barley_tea' %}active{% endif %}">麥茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'season' %}&tea_type=season{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'season' %}&tea_type=season{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'season' %}active{% endif %}">四季春</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'jasmine' %}&tea_type=jasmine{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'jasmine' %}&tea_type=jasmine{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'jasmine' %}active{% endif %}">茉莉花茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'pu_erh' %}&tea_type=pu_erh{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'pu_erh' %}&tea_type=pu_erh{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'pu_erh' %}active{% endif %}">普洱茶</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'other' %}&tea_type=other{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}{% if tea_filter != 'other' %}&tea_type=other{% endif %}&topping={{ topping_filter }}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if tea_filter == 'other' %}active{% endif %}">其他</a>
                 </div>
             </div>
@@ -414,9 +417,9 @@
             <div class="filter-row">
                 <span class="filter-label">配料：</span>
                 <div class="filter-buttons-group">
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}&tea_type={{ tea_filter }}{% if topping_filter != 'yes' %}&topping=yes{% endif %}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}&tea_type={{ tea_filter }}{% if topping_filter != 'yes' %}&topping=yes{% endif %}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if topping_filter == 'yes' %}active{% endif %}">有</a>
-                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}&tea_type={{ tea_filter }}{% if topping_filter != 'no' %}&topping=no{% endif %}&sort={{ sort_by }}"
+                    <a href="?milk_type={{ milk_filter }}&price={{ price_filter }}&tea_type={{ tea_filter }}{% if topping_filter != 'no' %}&topping=no{% endif %}&sort={{ sort_by }}#drink-filters"
                        class="btn filter-btn {% if topping_filter == 'no' %}active{% endif %}">無</a>
                 </div>
             </div>
@@ -544,7 +547,7 @@
             }
 
             url.searchParams.set('sort', newSort);
-            window.location.href = url.toString();
+            window.location.href = url.toString() + '#drink-filters';
         }
 
         // 切換收藏狀態
