--- a/mysite/templates/polls/recommended_drinks.html
+++ b/mysite/templates/polls/recommended_drinks.html
@@ -92,6 +92,7 @@
             font-weight: bold;
             color: #333;
             margin-bottom: 10px;
+            padding-right: 50px; /* 為 favorite-btn 預留空間 */
         }
 
         .drink-shop {
