--- a/mysite/templates/polls/shop_detail.html
+++ b/mysite/templates/polls/shop_detail.html
@@ -170,6 +170,7 @@
             font-weight: bold;
             color: #6B4423;
             margin-bottom: 10px;
+            padding-right: 50px; /* 為 favorite-btn 預留空間 */
         }
 
         .drink-price {
